<resources>
    <string name="app_name">青稞</string>
    <string name="send_message">发送消息</string>
    <string name="upload_file">上传文件</string>
    <string name="profile_avatar">用户头像</string>
    <string name="pomodoro_service_description">番茄钟计时器在后台运行，以确保专注计时不中断。</string>
    <string name="dialog_title_new_plan">新建计划</string>
    <string name="hint_plan_name">计划名称</string>
    <string name="label_quadrant">选择象限</string>
    <string name="label_start_time">开始时间</string>
    <string name="label_end_time_optional">结束时间（可选）</string>
    <string name="hint_select_date">点击选择日期</string>
    <string name="hint_select_time">点击选择时间</string>
    <string name="action_cancel">取消</string>
    <string name="action_save">保存</string>
</resources>